# ComfyUI-SECADNET

./: .gitignore  LICENSE  README.md  __init__.py  comfy-test.toml  pyproject.toml  requirements.txt
nodes/: __init__.py  secadnet_nodes.py
utils/: __init__.py  model_loader.py
utils/secadnet/: __init__.py  network.py  sdfs.py
utils/shared/: __init__.py  cad_common.py  occ_conversion.py  occ_logging.py
workflows/: secadnet.json
